# OculusCoin

./: .gitmodules  CMakeLists.txt  README.md
src/: CoinRiftWidget.cpp  CoinRiftWidget.h  main.cpp
